# Requests-Tracker

./: .gitignore  CMakeLists.txt  build.bat
src/: main.cpp
src/logger/: logger.cpp  logger.h
src/server/: server.cpp  server.h
src/utils/: certgen.cpp  certgen.h  utils.cpp  utils.h
static/: dashboard.html  index.html
